fix up spacing between open and closed app icons

--- a/src/app/components/taskbar/taskbar.module.css
+++ b/src/app/components/taskbar/taskbar.module.css
@@ -29,7 +29,7 @@
   display: flex;
   align-items: center;
   justify-content: left;
-  padding-left: 4.5vh;
+  padding-left: 2.5vh;
   min-width: max-content;
 }
 
@@ -61,7 +61,10 @@
     180deg,
     rgba(19, 135, 247, 1) 0%,
     rgba(43, 146, 250, 1) 4%,
-    rgba(19, 135, 247, 1) 16%
+    rgba(51, 118, 238, 1) 16%,
+    rgba(19, 135, 247, 1) 49%,
+    rgba(19, 135, 247, 1) 91%,
+    rgba(2, 79, 181, 1) 96%
   );
   box-shadow: 0px 2px 2px rgba(2, 79, 181, 1), 0px -1px 2px rgba(2, 79, 181, 1),
     inset 1px 0px 2px 1px #4699f9;
